adidicona arquivos de buidl

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\Aluno\\AppData\\Roaming\\NetBeans\\12.0\\config\\PayaraEE6\\Properties\\pfv3-1057110576.properties
+deploy.ant.properties.file=C:\\Users\\BrunoHenrique\\AppData\\Roaming\\NetBeans\\13\\config\\PayaraEE6\\Properties\\pfv3-789878613.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Aluno/Payara_Server/glassfish/domains/domain2
-j2ee.server.home=C:/Users/Aluno/Payara_Server/glassfish
-j2ee.server.instance=[C:\\Users\\Aluno\\Payara_Server\\glassfish;C:\\Users\\Aluno\\Payara_Server\\glassfish\\domains\\domain2]deployer:pfv5ee8:localhost:4848
-j2ee.server.middleware=C:/Users/Aluno/Payara_Server
+j2ee.server.domain=C:/Users/BrunoHenrique/Payara_Server/glassfish/domains/domain1
+j2ee.server.home=C:/Users/BrunoHenrique/Payara_Server/glassfish
+j2ee.server.instance=[C:\\Users\\BrunoHenrique\\Payara_Server\\glassfish;C:\\Users\\BrunoHenrique\\Payara_Server\\glassfish\\domains\\domain1]deployer:pfv5ee8:localhost:4848
+j2ee.server.middleware=C:/Users/BrunoHenrique/Payara_Server
 selected.browser=Chrome.INTEGRATED
-user.properties.file=C:\\Users\\Aluno\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+user.properties.file=C:\\Users\\BrunoHenrique\\AppData\\Roaming\\NetBeans\\13\\build.properties
