--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -10,5 +10,5 @@ j2ee.server.instance=[C:\\Users\\BrunoHenrique\\Payara_Server\\glassfish;C:\\Use
 j2ee.server.middleware=C:/Users/BrunoHenrique/Payara_Server
 javac.debug=true
 javadoc.preview=true
-selected.browser=Chrome.INTEGRATED
+selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
 user.properties.file=C:\\Users\\BrunoHenrique\\AppData\\Roaming\\NetBeans\\13\\build.properties
